Add 'connecting' state to WebPresentationConnectionState

BUG=655840,575351

Review-Url: https://codereview.chromium.org/2435243002
Cr-Commit-Position: refs/heads/master@{#427791}

Former-commit-id: b30d8e28048325fff57fca54be22b4f0370e93cd